--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-apple-signin-auth",
-  "version": "0.0.6",
+  "name": "@allsquare/react-apple-signin-auth",
+  "version": "0.0.6a",
   "description": " Apple signin for React using the official Apple JS SDK",
   "author": {
     "name": "Ahmed Tarek",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/a-tokyo/react-apple-signin-auth.git"
+    "url": "https://github.com/allsquare/react-apple-signin-auth"
   },
   "main": "dist/index.js",
   "files": [
     "dist/"
   ],
-  "homepage": "https://github.com/a-tokyo/react-apple-signin-auth#readme",
+  "homepage": "https://github.com/allsquare/react-apple-signin-auth#readme",
   "bugs": {
-    "url": "https://github.com/a-tokyo/react-apple-signin-auth/issues"
+    "url": "https://github.com/allsquare/react-apple-signin-auth/issues"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
@@ -114,6 +114,9 @@
       "name": "Ahmed Tarek",
       "email": "ahmed.tokyo1@gmail.com",
       "url": "https://github.com/A-Tokyo"
+    }, {
+      "name": "Jordan Becker",
+      "url": "https://github.com/habovh"
     }
   ]
 }
